@@ -2,6 +2,6 @@ from . import rawdatalogger
 from . import rawdatareplay
 from . import fileread
 from . import csvlogger
-from . import xlsxlogger
+from . import xlsxwriter
 from . import netcdflogger
 redvypr_devicemodule = True
