@@ -6,6 +6,7 @@
         - added distribute_data_replyqueue, that allows to send datapackets to the distribute thread and wait for the answer. Used to update statistics in a centralized way with set_metadata
         - improved datakey comparison
         - metadata design changed
+        - Added infrastructure to send command packets to all devices. All devices are subscribed now to '/d:/p:/i:metadata/k:_redvypr_command'
 - 0.9.1:
         - less verbose
         - RedvyprAddress is not expanding missing address entries with a '*'
